[package]
name = "squirrel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["macros"] }
chrono = "0.4.38"
lazy-regex = "3.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = "3.9.0"
strum_macros = "0.26.4"
tokio = { version = "1.39.3", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.10"
